# agda-magic

./: readme.markdown  xxxx.cabal
src/haskell/: Main.hs
src/haskell/XXXX/: SourceCode.hs
